--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
  <div class="1st_div">
-   <img src="/image/facebook_5968764.png" alt="facebook">
+   <img src="/facebook_5968764.png" alt="facebook">
     <p class="fname">Facebook</p>
   <p class="titl">Check This Locked Account information</p>
 </div>
